===============================================================
Tag name:  rtm1_0_14
Originator(s): muszala
Date: Jan 2, 2013
One-line Summary:  change default effvel value to that needed in sci45 branch

  The namelist variable, rtm_effvel is now preset to ACTIVE and effvel_active is set to 
  true.  This forces rtm to use slope in the velocity calculation.  If a user wants
  backward compatibilty with clm4_0_* tags, rtm_effvel will have to be set to NULL.

M    rtm/src/riverroute/RtmMod.F90

===============================================================
Tag name:  rtm1_0_13
Originator(s): muszala
Date: Nov 28, 2012
One-line Summary:  Add effVel as namelist.  cleanup RtmFloodInit logic

	- Add effective velocity as a namelist variable.
	- Change rdirc file.
	- Add RTM tests to test_system batch CLM tests.
	- Clean up logic in RtmFloodInit so R01 works without SLOPE and MAX_VOLR.
	- The modification to effvel (for the default case) changes the amount
	    of runoff (r2x_Forr_roff & r2x_Forr_ioff) in the system and does change climate.
	    The value is what is in CLM4.5
   - Change rdirc file to rdirc_0.5x0.5_simyr2000_slpmxvl_c120717.nc which is
	    correct and contains FLOOD and MAX_VOLR.  This fixes an error in choice
	    of rdirc file from clm4_0_55 / rtm1_0_10

M    rtm/bld/namelist_files/namelist_defaults_rtm.xml
M    rtm/bld/namelist_files/namelist_definition_rtm.xml
M    rtm/src/riverroute/RtmMod.F90
M    rtm/src/riverroute/RtmVar.F90

===============================================================
Tag name:  rtm1_0_12
Originator(s): tcraig
Date: Nov 25, 2012
One-line Summary: fix esmf coupling, update rtm and flood active logic
 - fix esmf coupling
 - modify rtm and flood active logic for better reuse and robustness
 - add rtm_mode and flood_mode to namelist, remove do_rtm and do_rtmflood
 - remove some redundant command line arguments to rtm build-namelist

M       bld/rtm.buildnml.csh
M       bld/build-namelist
M       bld/user_nl_rtm