@@ -1,4 +1,16 @@
 ===============================================================
+Tag name:  rtm1_0_15
+Originator(s): muszala
+Date: Jan 8, 2013
+One-line Summary:  add fix for h0 output and change comments in RtmMod.F90
+
+   Put in a fix from mvertens for h0 history file output.  the last rtm hist file
+	wasn't being written.  change some confusing comments in RtmMod.F90
+
+M       src/cpl_mct/rof_comp_mct.F90
+M       src/riverroute/RtmMod.F90
+
+===============================================================
 Tag name:  rtm1_0_14
 Originator(s): muszala
 Date: Jan 2, 2013
